Some updates with authentication and other functions (some will be deleting in future)